--- a/Digi_Catalogue/Base.lproj/Main.storyboard
+++ b/Digi_Catalogue/Base.lproj/Main.storyboard
@@ -462,6 +462,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="sendFeedBackButtonClicked:" destination="7Y0-H7-WMI" eventType="touchUpInside" id="4m9-Vt-gWX"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFk-bi-szD">
                                 <rect key="frame" x="20" y="210" width="560" height="295"/>
@@ -700,11 +703,11 @@ A new look and feel for our brand was never an easy decision, but it was importa
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="wxi-pk-34O" customClass="TabBarController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="9wY-sq-EX7">
+                    <tabBar key="tabBar" contentMode="scaleAspectFill" barStyle="black" id="9wY-sq-EX7">
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.99607843139999996" green="0.95697845240000001" blue="0.7052440203" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="tintColor" red="0.99607843139999996" green="0.95697845240000001" blue="0.7052440203" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="barTintColor" red="0.41561636740000002" green="0.31840835499999998" blue="0.21138520220000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.97647058819999999" green="0.94998702378666688" blue="0.7040897102381477" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="selectedImageTintColor" red="0.99607843139999996" green="0.95697845240000001" blue="0.7052440203" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
